# Pyre

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/pyre/: Cargo.toml
crates/pyre-cli/: Cargo.toml
crates/pyre-cli/src/: main.rs
crates/pyre/src/: camera.rs  distribution.rs  film.rs  geometry.rs  integrator.rs  lib.rs  light.rs  material.rs  math.rs  sampler.rs  scene.rs  viewer.rs
crates/pyre/src/geometry/: bvh.rs  mesh.rs  mod.rs  sphere.rs
crates/pyre/src/io/: gltf.rs  hdr.rs  mod.rs
crates/pyre/src/io/pbrt/: builder.rs  lexer.rs  mod.rs  parser.rs
scenes/: cornell.pbrt
