[package]
name = "pyre"
description = "A high-fidelity offline path tracer."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
# Bundles the progressive viewer window (winit + pixels). Off by default so
# library consumers that only want the offline renderer don't pull wgpu.
viewer = ["dep:winit", "dep:pixels", "dep:anyhow"]

[dependencies]
glam.workspace = true
rayon.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
exr.workspace = true
image.workspace = true
smallvec.workspace = true
gltf.workspace = true
thiserror.workspace = true
tracing.workspace = true
indicatif.workspace = true

# Viewer-only — gated by the `viewer` feature.
winit = { workspace = true, optional = true }
pixels = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
